--- a/index.html
+++ b/index.html
@@ -71,9 +71,11 @@
                      </div>
                      <div class="tab-contents" id="Certifications">
                         <ul>
+                            <li><span>2024</span><br><a href="https://drive.google.com/file/d/1x4uLntlTZyTC2I1CmzyCgRUuZQTg_fV2/view?usp=sharing" style="color: aqua;">Data for Entrepreneurs </a></li>
+                            <li><span>2024</span><br><a href="https://www.educative.io/verify-certificate/jnBQEoLp2X9hAn6wPlgrqguYjlZ7v2vm7uA" style="color: aqua;">Machine Learning System Design </a></li>
                             <li><span>2021</span><br><a href="https://www.coursera.org/account/accomplishments/verify/PG3RPHXL6DG3?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta&utm_product=course" style="color: aqua;">Blockchain: Foundations and Use cases</a></li>
                             <li><span>2020</span><br><a href="https://www.coursera.org/account/accomplishments/specialization/2W7ZHHNG8AP2?utm_source=link&utm_medium=certificate&utm_content=cert_image&utm_campaign=sharing_cta&utm_product=s12n" style="color: aqua;">Deep Learning Specialization - Andrew Ng</a> </li>
-                            <li><span>2019</span><br><a href="https://olympus1.mygreatlearning.com/certificate/KIIJVSIL" style="color: aqua;">Great Learning Data Science Program  </a></li>
+                            <li><span>2019</span><br><a href="https://olympus1.mygreatlearning.com/certificate/KIIJVSIL" style="color: aqua;">Great Learning Data Science Program  </a></li>   
                         </ul>
                      </div>
                     </div>
