--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <div class="layer">
                             <h3>DupliDetect</h3>
                             <p>This project aims to apply Machine Learning and NLP techniques to detect plagiarism in text and source code.</p>
-                            <a href="#" onclick="alert('Coming soon.!!');"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                            <a href="https://github.com/Jaga-droid/Plagiarism-Detection"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                         </div>
                     </div>
                     <div class="work">
